[package]
name = "jeremy"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.28"
poise = "0.6.1"
reqwest = { version = "0.12.23", features = ["json"] }
serenity = "0.12"
tokio = { version = "1.21", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
